added payment info/history submenu links

--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -285,6 +285,15 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Payments<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="payment-into.html">Payment Info</a>
+                                </li>
+                                <li>
+                                    <a href="payment-history.html">Payment History</a>
+                                </li>
+                            </ul>
+                            <!-- /.nav-second-level -->
                         </li>
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Reports</a>
