--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -28,7 +28,7 @@
     <link href="css/responsive-tables.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -284,7 +284,7 @@
                             <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Payments<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-money fa-fw"></i> Payments<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="payment-into.html">Payment Info</a>
@@ -296,13 +296,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Reports</a>
+                            <a href="tables.html"><i class="fa fa-area-chart fa-fw"></i> Reports</a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Helpdesk</a>
+                            <a href="forms.html"><i class="fa fa-life-bouy fa-fw"></i> Helpdesk</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
+                            <a href="api.html"><i class="fa fa-wrench fa-fw"></i> API<span class="fa arrow"></span></a>
                         </li>
                     </ul>
                 </div>
