revised fonts and styles

--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -287,10 +287,10 @@
                             <a href="#"><i class="fa fa-money fa-fw"></i> Payments<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="payment-into.html">Payment Info</a>
+                                    <a href="#">Payment Info</a>
                                 </li>
                                 <li>
-                                    <a href="payment-history.html">Payment History</a>
+                                    <a href="#">Payment History</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -314,7 +314,7 @@
         <div id="page-wrapper">
             <div class="row blue-box border-box">
                 <div class="col-lg-12">
-                    <h1 class="dash-title">Advertiser Dashboard</h1>
+                    <h1 class="dash-title"><i class="fa fa-dashboard"></i> Advertiser Dashboard</h1>
                   <div class="stats">
                      <ul>
                         <li>0
