--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="logo"><img src="../../../assets/images/logo.jpg" alt="Fingertise"></a>
+                <a href="#" class="logo"><img src="../assets/images/logo.jpg" alt="Fingertise"></a>
             </div>
             <!-- /.navbar-header -->
 
@@ -336,7 +336,7 @@
             <div class="row gray-box border-box">
                 <div class="col-lg-12 col-md-12">
                     
-                    <table>
+                    <table class="resp-table">
                         <thead>
                            <tr>
                               <th>CHECKBOX</th>
