--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +39,6 @@
 </head>
 
 <body>
-
     <div id="wrapper">
 
         <!-- Navigation -->
@@ -59,197 +57,7 @@
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-messages">
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                                </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                                </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <strong>John Smith</strong>
-                                    <span class="pull-right text-muted">
-                                        <em>Yesterday</em>
-                                    </span>
-                                </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a class="text-center" href="#">
-                                <strong>Read All Messages</strong>
-                                <i class="fa fa-angle-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-messages -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-tasks">
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <p>
-                                        <strong>Task 1</strong>
-                                        <span class="pull-right text-muted">40% Complete</span>
-                                    </p>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                            <span class="sr-only">40% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <p>
-                                        <strong>Task 2</strong>
-                                        <span class="pull-right text-muted">20% Complete</span>
-                                    </p>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                                            <span class="sr-only">20% Complete</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <p>
-                                        <strong>Task 3</strong>
-                                        <span class="pull-right text-muted">60% Complete</span>
-                                    </p>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                            <span class="sr-only">60% Complete (warning)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <p>
-                                        <strong>Task 4</strong>
-                                        <span class="pull-right text-muted">80% Complete</span>
-                                    </p>
-                                    <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                            <span class="sr-only">80% Complete (danger)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a class="text-center" href="#">
-                                <strong>See All Tasks</strong>
-                                <i class="fa fa-angle-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-tasks -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small">12 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-tasks fa-fw"></i> New Task
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a class="text-center" href="#">
-                                <strong>See All Alerts</strong>
-                                <i class="fa fa-angle-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-alerts -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                        <i class="fa fa-user fa-fw"></i> Welcome : Avery Swallows <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
@@ -257,7 +65,7 @@
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -281,10 +89,10 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-money fa-fw"></i> Payments<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="#">Payment Info</a>
@@ -296,13 +104,13 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-area-chart fa-fw"></i> Reports</a>
+                            <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span></a>
                         </li>
                         <li>
-                            <a href="forms.html"><i class="fa fa-life-bouy fa-fw"></i> Helpdesk</a>
+                            <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span></a>
                         </li>
                         <li>
-                            <a href="api.html"><i class="fa fa-wrench fa-fw"></i> API<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span> <span class="fa arrow"></span></a>
                         </li>
                     </ul>
                 </div>
@@ -320,7 +128,7 @@
                         <li>0
                            <p>Campaigns</p>
                         </li>
-                        <li>132,510
+                        <li>$0.00
                            <p>A/C Balance</p>
                         </li>
                         <li>$0.00
@@ -333,6 +141,38 @@
             </div>
             <!-- /.row -->
 
+            <!-- New Campaign Bar -->
+            <div id="bar-campaign" class="row gray-box border-box">
+               <div class="col-lg-2 col-md-4">
+                  <button type="button" class="btn btn-primary">New Campaign <i class="fa fa-plus"></i></button>
+               </div>
+               <div class="col-lg-2 col-md-4">
+                  <div class="form-group input-group">
+                     <input type="text" class="form-control" placeholder="Search text">
+                     <span class="input-group-btn">
+                        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                     </span>
+                  </div>
+               </div>
+               <div class="col-lg-3 col-md-4">
+                  <select class="form-control">
+                     <option>Active Campaigns</option>
+                     <option>Other</option>
+                     <option>Other</option>
+                  </select>
+               </div>
+               <div class="col-lg-2 col-md-6">
+                  <select class="form-control">
+                     <option>All</option>
+                     <option>Other</option>
+                  </select>
+               </div>
+               <div class="col-lg-3 col-md-6">
+                  <input class="form-control date-picker" placeholder="June 02, 2014 - July 02, 2014"> <i class="fa fa-refresh date-refresh"></i>
+               </div>
+            </div>
+            <!-- /New Campaign Bar -->
+
             <div class="row gray-box border-box">
                 <div class="col-lg-12 col-md-12">
                     
@@ -340,10 +180,10 @@
                         <thead>
                            <tr>
                               <th>CHECKBOX</th>
-                              <th>GEAR</th>
+                              <th><i class="fa fa-gear"></i></th>
                               <th>Campaign Name</th>
                               <th>APP ID</th>
-                              <th>Ad Type</th>
+                              <th>Ad Type <i span class="fa fa-info"></i></th>
                               <th>Status</th>
                               <th>Daily Budget</th>
                               <th>Impressions / Clicks</th>
@@ -353,7 +193,7 @@
                         </thead>
                         <tbody>
                           <tr>
-                              <td>gear</td>
+                              <td><input type="checkbox" value=""></td>
                               <td>#</td>
                               <td>thedroidmarket</td>
                               <td>012456</td>
@@ -365,7 +205,7 @@
                               <td>$0.00</td>
                           </tr>
                           <tr>
-                              <td>gear</td>
+                              <td><input type="checkbox" value=""></td>
                               <td>#</td>
                               <td>thedroidmarket</td>
                               <td>012456</td>
@@ -377,7 +217,7 @@
                               <td>$0.00</td>
                           </tr>
                           <tr>
-                              <td>gear</td>
+                              <td><input type="checkbox" value=""></td>
                               <td>#</td>
                               <td>thedroidmarket</td>
                               <td>012456</td>
@@ -389,7 +229,7 @@
                               <td>$0.00</td>
                           </tr>
                           <tr>
-                              <td>gear</td>
+                              <td><input type="checkbox" value=""></td>
                               <td>#</td>
                               <td>thedroidmarket</td>
                               <td>012456</td>
@@ -402,6 +242,18 @@
                           </tr>
                         </tbody>
                      </table>
+
+                     <table class="totals">
+                        <tbody>
+                          <tr>
+                              <td>Account Total and Averages</td>
+                              <td>Total Daily Budgets: 0</td>
+                              <td>Total Imp/Clicks</td>
+                              <td>Total CPM: $0.00</td>
+                              <td>Total Spent: $0.00</td>
+                          </tr>
+                       </tobdy>
+                    </table>
                             
                 </div>
                 <!-- /.col-lg-4 -->
@@ -412,6 +264,26 @@
 
     </div>
     <!-- /#wrapper -->
+
+   <footer>
+     <div id="footer">
+               <div class="container">
+         <div class="foot_link">
+                   <ul>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">FAQ</a></li>
+             <li><a href="#">Privacy Policy</a></li>
+             <li><a href="#">App Policy</a></li>
+             <li><a href="#">Opt Out</a></li>
+             <li><a href="#">Contact Us</a></li>
+             <li><a href="#">About</a></li>
+             <li><a href="#">Blog</a></li>
+             <li><a href="#">Support</a></li>
+           </ul>
+                 </div>
+       </div>
+             </div>
+   </footer>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
