linked up pages in sidebar

--- a/prototype/payment-info.html
+++ b/prototype/payment-info.html
@@ -89,13 +89,13 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
+                            <a href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
                         </li>
                         <li>
-                            <a class="active" href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
+                            <a class="active" href="payment-info.html"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a class="active" href="#">Payment Info</a>
+                                    <a class="active" href="payment-info.html">Payment Info</a>
                                 </li>
                                 <li>
                                     <a href="#">Payment History</a>
