--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -92,7 +92,7 @@
                             <a class="active" href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
                         </li>
                         <li>
-                            <a href="payment-info.html"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="payment-info.html">Payment Info</a>
@@ -110,7 +110,7 @@
                             <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span> <span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span></a>
                         </li>
                     </ul>
                 </div>
