fixed left sidebar js

--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -74,49 +74,77 @@
             </ul>
             <!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a class="active" href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="payment-info.html">Payment Info</a>
-                                </li>
-                                <li>
-                                    <a href="#">Payment History</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span></a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
+            <!-- Main Sidebar Nav -->
+         <div class="navbar-default sidebar" role="navigation">
+             <div class="sidebar-nav navbar-collapse">
+                 <ul class="nav" id="side-menu">
+                     <li class="sidebar-search">
+                         <div class="input-group custom-search-form">
+                             <input type="text" class="form-control" placeholder="Search...">
+                             <span class="input-group-btn">
+                             <button class="btn btn-default" type="button">
+                                 <i class="fa fa-search"></i>
+                             </button>
+                         </span>
+                         </div>
+                         <!-- /input-group -->
+                     </li>
+                     <li>
+                         <a class="active" href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
+                     </li>
+                     <li>
+                        <a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="payment-info.html"><i class="fa fa-money fa-fw"></i> Payment Info</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-money fa-fw"></i> Payment History</a>
+                          </li>
+                        </ul>
+                        <!-- nav-second-lvl -->
+                     </li>
+                     <li>
+                        <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i> Charts</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i>Custom Reports</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i>Report History</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i>Change History</a>
+                          </li>
+                        </ul>
+                        <!-- nav-second-lvl -->
+                     </li>
+                     <li>
+                        <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i> Support Ticket</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-area-chart"></i> Live Support</a>
+                          </li>
+                       </ul>
+                       <!-- /nav-second-lvl -->
+                     </li>
+                     <li>
+                         <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span></a>
+                     </li>
+                 </ul>
+             </div>
+             <!-- /.sidebar-collapse -->
+         </div>
+         <!-- Main Sidebar Nav -->
         </nav>
 
         <div id="page-wrapper">
@@ -286,21 +314,16 @@
    </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+   <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+   <!-- Bootstrap Core JavaScript -->
+   <script src="js/bootstrap.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
+   <!-- Metis Menu Plugin JavaScript -->
+   <script src="js/plugins/metisMenu/metisMenu.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+   <!-- Custom Theme JavaScript -->
+   <script src="js/sb-admin-2.js"></script>
 
 </body>
 
