--- a/prototype/payment-info.html
+++ b/prototype/payment-info.html
@@ -110,16 +110,16 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i> Charts</a>
+                              <a href="reports-charts.html"><i class="fa fa-area-chart"></i> Charts</a>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i>Custom Reports</a>
+                              <a href="reports-custom.html"><i class="fa fa-area-chart"></i>Custom Reports</a>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i>Report History</a>
+                              <a href="reports-history.html"><i class="fa fa-area-chart"></i>Report History</a>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i>Change History</a>
+                              <a href="reports-change-history.html"><i class="fa fa-area-chart"></i>Change History</a>
                           </li>
                         </ul>
                         <!-- nav-second-lvl -->
