--- a/prototype/payment-info.html
+++ b/prototype/payment-info.html
@@ -97,7 +97,7 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a class="active" href="payment-info.html"><i class="fa fa-money fa-fw"></i> Payment Info</a>
+                              <a class="active" href="payment-info.html"><i class="fa fa-credit-card fa-fw"></i> Payment Info</a>
                           </li>
                           <li>
                               <a href="#"><i class="fa fa-money fa-fw"></i> Payment History</a>
@@ -110,16 +110,16 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="reports-charts.html"><i class="fa fa-area-chart"></i> Charts</a>
+                              <a href="reports-charts.html"><i class="fa fa-line-chart fa-fw"></i> Charts</a>
                           </li>
                           <li>
-                              <a href="reports-custom.html"><i class="fa fa-area-chart"></i>Custom Reports</a>
+                              <a href="reports-custom.html"><i class="fa fa-bar-chart fa-fw"></i> Custom Reports</a>
                           </li>
                           <li>
-                              <a href="reports-history.html"><i class="fa fa-area-chart"></i>Report History</a>
+                              <a href="reports-history.html"><i class="fa fa-history fa-fw"></i> Report History</a>
                           </li>
                           <li>
-                              <a href="reports-change-history.html"><i class="fa fa-area-chart"></i>Change History</a>
+                              <a href="reports-change-history.html"><i class="fa fa-history fa-fw"></i> Change History</a>
                           </li>
                         </ul>
                         <!-- nav-second-lvl -->
@@ -129,10 +129,10 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i> Support Ticket</a>
+                              <a href="#"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
                           </li>
                           <li>
-                              <a href="#"><i class="fa fa-area-chart"></i> Live Support</a>
+                              <a href="#"><i class="fa fa-wechat fa-fw"></i> Live Support</a>
                           </li>
                        </ul>
                        <!-- /nav-second-lvl -->
