--- a/prototype/reports-charts.html
+++ b/prototype/reports-charts.html
@@ -89,57 +89,57 @@
 								 </div>
 								 <!-- /input-group -->
 							</li>
-							<li>
-								 <a href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
-								<!-- /nav-second-lvl -->
-								<ul class="nav nav-second-level">
-								  <li>
-										<a href="payment-info.html"><i class="fa fa-money fa-fw"></i> Payment Info</a>
-								  </li>
-								  <li>
-										<a href="#"><i class="fa fa-money fa-fw"></i> Payment History</a>
-								  </li>
-								</ul>
-								<!-- nav-second-lvl -->
-							</li>
-							<li class="active">
-								<a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span> <span class="fa arrow"></span></a>
-								<!-- /nav-second-lvl -->
-								<ul class="nav nav-second-level">
-								  <li>
-										<a class="active" href="reports-charts.html"><i class="fa fa-area-chart"></i> Charts</a>
-								  </li>
-								  <li>
-										<a href="reports-custom.html"><i class="fa fa-area-chart"></i>Custom Reports</a>
-								  </li>
-								  <li>
-										<a href="reports-history.html"><i class="fa fa-area-chart"></i>Report History</a>
-								  </li>
-								  <li>
-										<a href="reports-change-history.html"><i class="fa fa-area-chart"></i>Change History</a>
-								  </li>
-								</ul>
-								<!-- nav-second-lvl -->
-							</li>
-							<li>
-								<a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span> <span class="fa arrow"></span></a>
-								<!-- /nav-second-lvl -->
-								<ul class="nav nav-second-level">
-								  <li>
-										<a href="#"><i class="fa fa-area-chart"></i> Support Ticket</a>
-								  </li>
-								  <li>
-										<a href="#"><i class="fa fa-area-chart"></i> Live Support</a>
-								  </li>
-							  </ul>
-							  <!-- /nav-second-lvl -->
-							</li>
-							<li>
-								 <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span></a>
-							</li>
+					<li>
+                         <a href="ad-dashboard.html"><i class="fa fa-dashboard fa-fw"></i> <span class="sbtxt">Dashboard</span></a>
+                     </li>
+                     <li>
+                        <a href="#"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="payment-info.html"><i class="fa fa-credit-card fa-fw"></i> Payment Info</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-money fa-fw"></i> Payment History</a>
+                          </li>
+                        </ul>
+                        <!-- nav-second-lvl -->
+                     </li>
+                     <li class="active">
+                        <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a class="active" href="reports-charts.html"><i class="fa fa-line-chart fa-fw"></i> Charts</a>
+                          </li>
+                          <li>
+                              <a href="reports-custom.html"><i class="fa fa-bar-chart fa-fw"></i> Custom Reports</a>
+                          </li>
+                          <li>
+                              <a href="reports-history.html"><i class="fa fa-history fa-fw"></i> Report History</a>
+                          </li>
+                          <li>
+                              <a href="reports-change-history.html"><i class="fa fa-history fa-fw"></i> Change History</a>
+                          </li>
+                        </ul>
+                        <!-- nav-second-lvl -->
+                     </li>
+                     <li>
+                        <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="#"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
+                          </li>
+                          <li>
+                              <a href="#"><i class="fa fa-wechat fa-fw"></i> Live Support</a>
+                          </li>
+                       </ul>
+                       <!-- /nav-second-lvl -->
+                     </li>
+                     <li>
+                         <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span></a>
+                     </li>
 					  </ul>
 				 </div>
 				 <!-- /.sidebar-collapse -->
