--- a/prototype/helpdesk.html
+++ b/prototype/helpdesk.html
@@ -146,7 +146,15 @@
              <div class="row">
                 <div class="col-lg-8 col-md-8 gray-box border-box panel panel-default">
                      <form role="form">
-                      <!-- row -->                                      <div class="panel-body">
+                               <!-- Nav tabs -->
+                         <ul class="nav nav-tabs">
+                             <li class="active"><a href="#home" data-toggle="tab" aria-expanded="true"> Submit Ticket</a>
+                             </li>
+                             <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Ticket History (0 new messages)</a>
+                             </li>
+                         </ul>
+                      <!-- row -->    
+                         <div class="panel-body">
     <div class="col-lg-3 col-md-4 col-xs-4">
                                             <label>Email ID: <span class="text-danger">*</span></label>                                                       </div>
                                             <div class="col-lg-9 col-md-8 col-xs-8"><p>email@example.com</p>
