linked helpdesk to dashboard

--- a/prototype/ad-dashboard.html
+++ b/prototype/ad-dashboard.html
@@ -129,7 +129,7 @@
                         <!-- /nav-second-lvl -->
                         <ul class="nav nav-second-level">
                           <li>
-                              <a href="#"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
+                              <a href="helpdesk.html"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
                           </li>
                           <li>
                               <a href="#"><i class="fa fa-wechat fa-fw"></i> Live Support</a>
