replaced "airpush" wording with "fingertise"

--- a/prototype/payment-info.html
+++ b/prototype/payment-info.html
@@ -274,7 +274,7 @@
                   </div>
                   <div class="col-lg-9 col-md-8 col-xs-8">
                      <input class="form-control">
-                     <p>Enter your PayPal login id Here. Do note that your Paypal login might be different from your Airpush login.</p>
+                     <p>Enter your PayPal login id Here. Do note that your Paypal login might be different from your Fingertise login.</p>
                      <div class="alert alert-info">
                         NOTE: Paypal, ACH and Transaction fees will be deducted from your account.
                      </div>
