--- a/prototype/advertiser-register.html
+++ b/prototype/advertiser-register.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fingertise - Forgot Password</title>
+    <title>Fingertise - Advertiser Register</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
