--- a/prototype/helpdesk.html
+++ b/prototype/helpdesk.html
@@ -95,25 +95,26 @@
                             <a href="payment-info.html"><i class="fa fa-money fa-fw"></i> <span class="sbtxt">Payments</span> <span class="fa arrow"></span></a>
                             
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span></a>
-                        </li>
+                       <li>
+                        <a href="#"><i class="fa fa-area-chart fa-fw"></i> <span class="sbtxt">Reports</span> <span class="fa arrow"></span></a>
+                        <!-- /nav-second-lvl -->
+                        <ul class="nav nav-second-level">
+                          <li>
+                              <a href="reports-charts.html"><i class="fa fa-line-chart fa-fw"></i> Charts</a>
+                          </li>
+                          <li>
+                              <a href="reports-custom.html"><i class="fa fa-bar-chart fa-fw"></i> Custom Reports</a>
+                          </li>
                         <li>
                             <a href="#"><i class="fa fa-life-bouy fa-fw"></i> <span class="sbtxt">Helpdesk</span></a>
                         </li>
                         <ul class="nav nav-second-level">
                                 <li>
-                                    <a class="active" href="support-ticket.html"><i class="fa fa-envelope-o"></i> Support Ticket</a>
+                                    <a class="active" href="helpdesk.html"><i class="fa fa-ticket fa-fw"></i> Support Ticket</a>
                                 </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-headphones"></i> Live Support</a>
-                                </li>
-                            </ul>
+                        </ul>
                             <!-- /.nav-second-level -->
-                        <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i> <span class="sbtxt">API</span> <span class="fa arrow"></span></a>
-                        </li>
-                    </ul>
+                        </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
             </div>
